<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.DetailActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/iv_photo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:adjustViewBounds="true"
            android:scaleType="fitXY"
            android:src="@drawable/food"
            android:layout_marginBottom="8dp"/>

        <TextView
            android:id="@+id/tv_name"
            android:text="@string/food_name"
            android:textAlignment="center"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:layout_marginTop="16dp"
            style="@style/textContent.title"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:layout_marginTop="4dp"
            android:gravity="center">

            <ImageView
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:src="@drawable/time"
                android:layout_marginEnd="4dp"/>

            <TextView
                android:id="@+id/tv_time"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/time"/>

            <ImageView
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:src="@drawable/serving"
                android:layout_marginEnd="4dp"
                android:layout_marginStart="8dp"/>

            <TextView
                android:id="@+id/tv_serving"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/serving"/>
        </LinearLayout>

        <TextView
            android:text="@string/ingredients"
            style="@style/textContent.Subtitle"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:layout_marginTop="16dp"/>

        <TextView
            android:id="@+id/tv_ingredient"
            android:text="@string/ingredients"
            style="@style/textContent"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:layout_marginTop="4dp"/>

        <TextView
            android:text="@string/cook_step"
            style="@style/textContent.Subtitle"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:layout_marginTop="16dp"/>

        <TextView
            android:id="@+id/tv_step"
            android:text="@string/cook_step"
            style="@style/textContent"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:layout_marginBottom="16dp"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:layout_marginBottom="16dp"
            android:gravity="center">

            <Button
                android:id="@+id/bt_share"
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:text="@string/share"
                android:layout_weight="1"/>

            <View
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_weight="1"/>

            <Button
                android:id="@+id/bt_back"
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:text="@string/back"
                android:layout_weight="1"/>
        </LinearLayout>
    </LinearLayout>
</ScrollView>